# backup

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: publish.sh
.github/workflows/: release.yaml
fav/: Cargo.toml
fav/src/: main.rs
fav_cli/: Cargo.toml  build.rs
fav_cli/src/: lib.rs
fav_cli/src/bili/: action.rs  mod.rs
fav_core/: Cargo.toml  README.md  build.rs
fav_core/src/: api.rs  attr.rs  config.rs  error.rs  lib.rs  local.rs  meta.rs  ops.rs  res.rs  visual.rs
fav_core/src/test_utils/: data.rs  impls.rs
fav_derive/: Cargo.toml
fav_derive/src/: lib.rs  owner.rs
fav_utils/: Cargo.toml  build.rs
fav_utils/proto/: bili.proto
fav_utils/src/: error.rs  lib.rs
fav_utils/src/bili/: api.rs  data.rs  local.rs  ops.rs  res.rs
fav_utils/src/utils/: bar.rs
fav_utils_old/: Cargo.toml
