[workspace]
members = ["fav", "fav_cli", "fav_core", "fav_utils", "fav_derive"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.2.18"
authors = ["Louis <836250617@qq.com>"]
description = "Back up your favorite online resources with CLI."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/fav"
documentation = ""

[workspace.dependencies]
fav_core = { path = "fav_core" }
fav_derive = { path = "fav_derive" }
fav_utils = { path = "fav_utils" }
fav_cli = { path = "fav_cli" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
