[workspace]
members = ["fav", "fav_cli", "fav_core", "fav_utils", "fav_derive"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.2.19"
authors = ["Louis <836250617@qq.com>"]
description = "Back up your favorite online resources with CLI."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/fav"
documentation = ""

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
