[package]
name = "fav_core"
version = "0.0.14"
authors.workspace = true
description = "Fav's core crate; A collection of traits."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_core"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derive
fav_derive = { workspace = true, optional = true }
# cli
tabled = { version = "0.15.0", optional = true }
# net
url = "2.5"
http = "1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
# protobuf
protobuf = { version = "3", features = ["with-bytes"] }
protobuf-json-mapping = { version = "3" }
# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# async
trait-variant = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros"] }
tokio-stream = { version = "0.1" }
futures = "0.3"
# utils
bitflags = "2.5"
# tracing
tracing = { version = "0.1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
protobuf-codegen = { version = "3" }

[features]
default = ["derive", "visual"]
derive = ["dep:fav_derive"]
visual = ["dep:tabled"]
