[package]
name = "fav_derive"
version = "0.0.1"
authors.workspace = true
description = "Derive macros for fav"
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_derive"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
fav_core.workspace = true
reqwest = { version = "0.12" }
